Update for HTML/CSS
* removed obsolete 'footer' from main.css and main.html
* added modal.css and modal.js
* changed authorization for 'Lagerstandort' in header.html
* first tooltips on table-heads were added to material.html
* minor changes in materialverwaltung.html and neuveranstaltung.html
* tooltips, modal and minor changes on veranstaltung.html
* added 'Zurück'-Button to veranstaltungbuchung.html
* added basic CSS to veranstaltungbuchungupdate.html
* added header to veranstaltungeinheit.html
* added basic CSS to veranstaltungeinheitupdate.html
* added header and minor change to veranstaltungupdate.html

--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -3,10 +3,9 @@
 		<div class="topnav" id="myTopnav" th:fragment="header">
 		<!--	<img class="logo" src="./Pictures/WRK_Logo.jpg" alt="Logo"> -->
 			<a href="/" class="active">MATILDA</a>
-			<div class="dropdown">
+			
 				<a href="/material" class="active">Material</a>
 				<a href="/veranstaltung" class="active">Veranstaltung</a>
-			</div>
 			
 			<div class="dropdown">
 			<div sec:authorize="hasAuthority('ADMIN')">
@@ -20,9 +19,11 @@
 				 </div>
 			 </div>
 			</div>
-			<a href="/lagerstandort" class="active">Lagerstandort</a>
+			<div sec:authorize="hasAuthority('ADMIN')">
+				<a href="/lagerstandort" class="active">Lagerstandort</a>
+			</div>
 			<a href="/report" class="active">Report</a>
-
+			
 			<div class="dropdownAdmin">
 				<button class="dropbtnAdmin" th:text="#{konto}">
 					<i class="fa fa-caret-down"></i>
