--- a/src/main/resources/templates/materialverwaltung.html
+++ b/src/main/resources/templates/materialverwaltung.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 		<head th:replace="/fragment/header :: header"></head>
-<h2>Aktuelle Materialien im Lager</h2>
+<h2>Aktuelles Material im Lager</h2>
 <div th:unless="${#lists.isEmpty(materialien)}">
 <table class="mainTable">
 <thead>
