--- a/src/main/resources/templates/veranstaltungeinheit.html
+++ b/src/main/resources/templates/veranstaltungeinheit.html
@@ -9,11 +9,11 @@
 	<link rel="stylesheet" type="text/css" th:href="@{/css/main.css}" />
 	<link rel="stylesheet" type="text/css" th:href="@{/css/forms.css}" />
 	<link rel="stylesheet" type="text/css" th:href="@{/css/index.css}" />
-
+	<head th:replace="/fragment/header :: header"></head>
 	<title>Veranstaltung-Einheitentyp</title>
 </head>
 <body>
-<h2>Einheiten zuweisen</h2>
+<h2> Einheiten zuweisen:</h2>
 <div class="container">
 <form action="#" th:action="@{/veranstaltungeinheit}" th:object="${veranstaltung_einheitentyp}" method="post">
 		
@@ -49,17 +49,19 @@
        	</div>
         <p><input type="submit" value="Bestätigen" /> </p>
 </form>
-</div>
-
+<br>
 <h3>bereits zugewiesene Einheiten</h3>
 <div th:unless="${#lists.isEmpty(verein)}">
 <table class="mainTable">
 <thead>
-<tr>
-<th>Veranstaltung</th>
-<th>Einheitentyp</th>
-<th>Bezeichnung</th>
-</tr>
+	<tr>
+		<th>Veranstaltung</th>
+		<th>Einheitentyp</th>
+		<th>Bezeichnung</th>
+		<th class="CellWithComment">!
+			<span class="CellComment" >Bereits zugewiesene Einheiten ändern oder löschen</span>
+		</th>
+	</tr>
 </thead>
 <dl th:each="veranstaltung_einheitentyp : ${verein}">
 <tr>
@@ -74,19 +76,18 @@
 </tr>
 </table>
 </div>
+</div>
 <div th:if="${#lists.isEmpty(verein)}">
 <p>Es gibt keine Veranstaltung</p>
 </div>
 <hr/>
-<input type="button" value="Zurück" onClick="gotoVeranstaltung()" class="bigButtons"/>
-				<script>
-					function gotoVeranstaltung()
-					{
-						window.location.href="../veranstaltung";
-					}
-				</script>
-<input type="bigButtons" style="float: right; text-align: center" value="Fertig / Weiter" onClick="gotoVeranstaltung()" class="bigButtons"/>
-
+<input type="bigButtons" style="float: right; text-align: center" value="Beenden" onClick="gotoVeranstaltung()" class="bigButtons"/>
+			<script>
+				function gotoVeranstaltung()
+				{
+					window.location.href="../veranstaltung";
+				}
+			</script>
 
       <div class="col-md-6 col-md-offset-3">
             <div th:if="${param.success}">
