--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -28,17 +28,6 @@ h4 {
 	font-family: Arial;
 }
 
-/*footer {			muss erst rausfinden wofür das war
-    position: fixed;
-    height: 50px;
-    bottom: 0;
-    width: 100%;
-    background-color: #e3e3e3
-}
-
-footer p {
-    padding: 15px;
-}*/
 .error-message {
 	color: #a94442;
 }
@@ -88,7 +77,7 @@ footer p {
 /* ------------------- HINTERGRUNDFARBE ----------------*/
 .genBackground {
 	background-color: #eeeeee;
-/*	background-image: url("../pics/WRK_Logo.png"); */
+	/*	background-image: url("../pics/WRK_Logo.png"); */
 }
 
 /* ---------------------- BUTTONS ----------------------*/
@@ -229,7 +218,8 @@ table.mainTable tfoot .links a {
 	padding: 2px 8px;
 	border-radius: 5px;
 }
-table.mainTabale input[type=text]{
+
+table.mainTable input[type=text] {
 	width: 100%;
 	padding: 12px;
 	border: 1px solid #ccc;
@@ -237,4 +227,29 @@ table.mainTabale input[type=text]{
 	resize: vertical;
 	font-size: 16px;
 	text-align: center;
+}
+
+.CellWithComment {
+	position: relative;
+	background-image: 
+}
+
+.CellComment {
+	display: none;
+	position: absolute;
+	z-index: 100;
+	border: 1px;
+	background-color: #ffffee;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #b60e0c;
+	padding: 3px;
+	color: black;
+	top: 20px;
+	left: 20px;
+	font-weight: normal;
+}
+
+.CellWithComment:hover span.CellComment {
+	display: block;
 }
