--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html> 
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
@@ -66,11 +66,5 @@
 				}
 			}
 		</script>
-		
-		<footer>
-		<div class="footer">
-			<a href="#Impressum" class="footerText">Impressum</a>
-		</div>
-		</footer>
 	</body>
 </html>
