--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -118,7 +118,7 @@
                        th:text="${error}">Validation error</p>
                 </div>
                 <div class="form-check">
-                    <button type="submit" class="btn btn-success">Register</button>
+                    <button type="submit" id = "login-submit" class="btn btn-success">Register</button>
                 </div>
 
             </form>
