--- a/src/main/resources/templates/veranstaltung.html
+++ b/src/main/resources/templates/veranstaltung.html
@@ -15,7 +15,9 @@
 <link rel="stylesheet" type="text/css" th:href="@{/css/modal.css}" />
 <head th:replace="/fragment/header :: header"></head>
 <body class="genBackground">
-		
+
+<title>Veranstaltung</title>
+
 <h2>Übersicht Veranstaltungen</h2>
 <div th:unless="${#lists.isEmpty(veranstaltungen)}">
 <table class="mainTable" id="sortTable">
